# soul

./: .gitignore  LICENSE  README.md  game.py  main.py  pyproject.toml  requirements.txt
base/: base_model.py  ollama_base.py
config/system_prompts/: consolidation_mode.txt  reflection_mode.txt
examples/: langchain_integration.py
memory/: memory_store.py  ollama_embeddings.py
models/: __init__.py  langchain_ai00.py
safety/: guardrails.py
soul/config/: sampler_presets.json
soul/config/system_prompts/: master_personality.txt  reflection_mode.txt  task_mode.txt
soul/core/: idle_engine.py  sampler_manager.py
soul/memory/: memory_store.py  task_manager.py
soul/models/: ai00_client.py
tests/: test_langchain_ai00.py
