[project]
name = "soul"
version = "0.3.0"
description = "A personal AI companion with autonomous self-reflection, memory management, and human-like behavior"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=1.1.10",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
analysis.autoImportCompletions = false
reportMissingImports = true
typeCheckingMode = "basic"
